--- a/owapp/src/header/header.css
+++ b/owapp/src/header/header.css
@@ -1,10 +1,122 @@
 .header{
     width: 100%;
-    height: 130px;
-    background-color: rgb(180, 180, 180);
+    height: 90px;
+    background-color: rgba(180, 180, 180, 0.523);
     display: flex;
     align-items: center;
+    justify-content: space-around;
+    position: relative;
+    z-index: 1;
 }
 .header .logo{
-    width: 140px;
+    width: 100px;
+
+}  
+.opcoes{
+    margin-left: 20px;
+    display: flex;
+    flex-direction: row;
+    font-size: 25px;
+
 }
+.opcoes a{
+    font-family: 'Roboto Mono', monospace;
+    text-decoration: none;
+    color: black;
+    margin-left: 20px;
+    height: 43px;
+    padding: 0 10px;
+    transition: .5s;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    padding-top: 5px;
+    text-shadow: 1px 1px 1px rgba(37, 37, 37, 0.189);
+}
+.opcoes a:hover{
+    background:#FA6A16 ;
+    box-shadow: 0 0 10px #FA6A16, 0 0 15px #ED6516, 0 0 30px #AD4910 ;
+    transition-delay: .5s;
+    color: white;
+    border-radius: 10px;
+}
+.opcoes a span{
+    position: absolute;
+    display: block;
+
+}
+.opcoes a span:nth-child(1){
+    width: 100%;
+    height: 2px;
+    top: 0;
+    left: -150%;
+    background: linear-gradient(90deg, transparent, #FA6A16);
+}
+.opcoes a:hover span:nth-child(1){
+    left: 100%;
+    transition: .5s;
+ 
+}
+
+.opcoes a span:nth-child(2){
+    width: 2px;
+    height: 100%;
+    right: 0;
+    top: -150%;
+    background: linear-gradient(180deg, transparent, #FA6A16);
+}
+.opcoes a:hover span:nth-child(2){
+    top: 100%;
+    transition: .5s;
+    transition-delay: .125s;
+ 
+}
+
+
+
+.opcoes a span:nth-child(3){
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    right: -150%;
+    background: linear-gradient(90deg, transparent, #FA6A16);
+}
+.opcoes a:hover span:nth-child(3){
+    right: 100%;
+    transition: 0.5s;
+    transition-delay: .25s;
+ 
+}
+
+.opcoes a span:nth-child(4){
+    width: 2px;
+    height: 100%;
+    left: 0;
+    bottom: -150%;
+    background: linear-gradient(360deg, transparent, #FA6A16);
+}
+.opcoes a:hover span:nth-child(4){
+    bottom: 100%;
+    transition: .5s;
+    transition-delay: .375s;
+ 
+}
+.opcoes .baixar{
+    font-family: 'Roboto Mono', monospace;
+    text-decoration: none;
+    color: white;
+    margin-left: 20px;
+    height: 43px;
+    padding: 0 10px;
+    transition: .5s;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    padding-top: 5px;
+    background-color: #FA6A16;
+
+}
+.opcoes .baixar:hover{
+    transition-delay: 0s;
+}
+
